<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_back_color"
    android:orientation="vertical" >

    <include layout="@layout/menu_bar" />

    <RelativeLayout
        android:id="@+id/account_mobile_layout"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginTop="@dimen/layout_margin_20dp"
        android:background="@drawable/general_dynamic_bg" >

        <TextView
            android:id="@+id/account_mobile"
            style="@style/CommonTextViewStyle"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_margin_3dp"
            android:text="@string/password_setting_phone" />

        <ImageView
            android:id="@+id/account_mobile_jump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_margin_3dp"
            android:layout_marginRight="@dimen/layout_margin_3dp"
            android:contentDescription="@string/right_jump_desc"
            android:src="@drawable/common_icon_arrow_right" />

        <TextView
            android:id="@+id/account_mobile_edit"
            style="@style/CommonTextViewStyle"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/account_mobile_jump"
            android:text="1595864578" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_password_layout"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginTop="@dimen/layout_margin_20dp"
        android:background="@drawable/general_dynamic_bg" >

        <TextView
            android:id="@+id/account_password"
            style="@style/CommonTextViewStyle"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_margin_3dp"
            android:text="@string/password_setting_pword" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/layout_margin_3dp"
            android:contentDescription="@string/right_jump_desc"
            android:src="@drawable/common_icon_arrow_right" />
    </RelativeLayout>

</LinearLayout>